--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 ---
-<article class="post">
-  <strong class="post-title">{{page.title}}</strong>
+<article class="post post-no-top-margin">
+  <!-- <strong class="post-title">{{page.title}}</strong> -->
   <div class="post-body">
     {{content}}
   </div>
