Update btn-pink class and button in search modal.

--- a/_includes/search_modal.html
+++ b/_includes/search_modal.html
@@ -15,7 +15,7 @@
             </div>
 
             <div class="modal-footer left">
-                <a href="{{site.baseurl}}/tags/" class="btn btn-sm btn-info" title="Tags" target="_blank">Didn't find? Check Tags</a>
+                <a href="{{site.baseurl}}/tags/" class="btn btn-sm btn-dark btn-pink" title="Tags" target="_blank">Didn't find? Check Tags</a>
             </div>
         </div>
     </div>
