--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>{% if page.title %}{{page.title}}{% else %}{{site.title}}{% endif %}</title>
+        <title>{% if page.title %}{{site.title}} | {{page.title}}{% else %}{{site.title}}{% endif %}</title>
 
         <!-- seo -->
         <meta name="author" content="{{site.author}}">
