--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,4 @@
 <div>
-    <h3>Hey! This is Mort!</h3>
-    <div>I'm software engineer and open source enthusiast especially in C/C++
-        & Python and GNU/Linux.
-    </div>
-    <div>
-        {% include navbar.html %}
-    </div>
+    <h3>Hi! This is Mort!</h3>
+    <div>I'm software engineer and open source enthusiast especially in C/C++ & Python and GNU/Linux.</div>
 </div>
