--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
     <title>{% if page.title %}{{site.title}} | {{page.title}}{% else %}{{site.title}}{% endif %}</title>
 
     <!-- seo -->
     <meta name="author" content="{{site.author}}">
-    {% if page.description %}<meta name="description" content="{{page.description}}">
-    {% elsif page.excerpt %}<meta name="description" content="{{page.excerpt | strip_html | strip_newlines | truncate:150}}">
-    {% else %}<meta name="description" content="{{site.description}}">{% endif %}
-    <meta name="keywords" content="{% if page.keywords %}{{page.keywords|join:','}}{% else %}{{site.keywords|join:','}}{% endif %}">
+    {% if page.description %}
+    <meta name="description" content="{{page.description}}">
+    {% elsif page.excerpt %}
+    <meta name="description" content="{{page.excerpt | strip_html | strip_newlines | truncate:150}}">
+    {% else %}
+    <meta name="description" content="{{site.description}}">
+    {% endif %}
+    <meta name="keywords"
+          content="{% if page.keywords %}{{page.keywords|join:','}}{% else %}{{site.keywords|join:','}}{% endif %}">
     <!-- end seo -->
 
     <link rel="canonical" href="{{site.baseurl}}{{page.url}}">
 
     <!-- css -->
+    <link rel="stylesheet" href="{{site.baseurl}}/static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{site.baseurl}}/static/css/all.min.css">
     <link rel="stylesheet" href="{{site.baseurl}}/static/css/extra.css">
     <!-- end css -->
 
@@ -23,25 +30,33 @@
     <meta property="org:url" content="{{site.url}}"/>
     <meta property="org:type" content="website"/>
     <meta property="org:title" content="{% if page.title %}{{page.title}}{% else %}{{site.title}}{% endif %}"/>
-    {% if page.description %}<meta property="org:description" content="{{page.description}}"/>
-    {% elsif page.excerpt %}<meta property="org:description" content="{{page.excerpt | strip_html | strip_newlines | truncate:150}}"/>
-    {% else %}<meta name="description" content="{{site.description}}">{% endif %}
-    <meta property="org:img" content="{{site.baseurl}}{% if page.image %}{{page.image}}{% else %}/static/images/me.jpg{% endif %}"/>
+    {% if page.description %}
+    <meta property="org:description" content="{{page.description}}"/>
+    {% elsif page.excerpt %}
+    <meta property="org:description" content="{{page.excerpt | strip_html | strip_newlines | truncate:150}}"/>
+    {% else %}
+    <meta name="description" content="{{site.description}}">
+    {% endif %}
+    <meta property="org:img"
+          content="{{site.baseurl}}{% if page.image %}{{page.image}}{% else %}/static/images/me.jpg{% endif %}"/>
     <!-- end open graph -->
 
     <!-- twitter -->
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:site" content="@{{site.twitter_username}}"/>
     <!-- end twitter -->
-  </head>
-  <body>
-    <div class="top-color"></div>
-    <div class="mb-10 p-10">
-	  {% include header.html %}
-      <hr>
-      {{content}}
-      <hr>
-      {% include footer.html %}
+</head>
+<body>
+<div class="container">
+    <div>
+        {% include navbar.html %}
     </div>
-  </body>
+    <div class="mt-3">
+        {{content}}
+    </div>
+    <div class="border-top mt-3 pt-3">
+        {% include footer.html %}
+    </div>
+</div>
+</body>
 </html>
