--- a/static/css/extra.css
+++ b/static/css/extra.css
@@ -1,73 +1,5 @@
-* {
-    font-family: sans-serif, helvetica;
-    font-size: 15px;
-}
-
-body {
-    margin: 0;
-    padding: 0;
-}
-
-.a, .a:hover, .page-link, .page-link:hover {
-    color: inherit;
-    text-decoration-style: unset;
-}
-
-.mb-10 {
-    margin-bottom: 10px;
-}
-
-.mb-5 {
-    margin-bottom: 5px;
-}
-
-.mt-10 {
-    margin-top: 10px;
-}
-
-.p-10 {
-    padding: 10px;
-}
-
-.badge-post-tag {
-    color: #1B213C;
-}
-
-.post-tags label {
-    font-size: 13px;
-}
-
-.post-title, .post-title a {
-    font-weight: bold;
-}
-
-hr {
-    border: none;
-    height: 1px;
-    background: #A0A0A0;
-}
-
-.top-color {
-    height: 7px;
-    background-color: #4caf50
-}
-
-.highlighter-rouge > .highlight {
-    border: 1px solid #A0A0A0;
-    padding: 5px;
-}
-
 .highlighter-rouge {
-    background-color: #e1e2e2;
-    font-family: hack, monospace, sans-serif;
-}
-
-.highlighter-rouge * {
-    font-family: hack, monospace, sans-serif;
-    margin: 0;
-}
-
-fieldset {
-    border: 1px solid #A0A0A0;
+    border:1px solid #A0A0A0;
+    border-radius: 4px;
     padding: 5px;
 }
