--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,15 +47,17 @@
     <!-- end twitter -->
 </head>
 <body>
-<div class="container">
+<div>
     <div>
         {% include navbar.html %}
     </div>
-    <div class="mt-3">
-        {{content}}
-    </div>
-    <div class="border-top mt-3 pt-3">
-        {% include footer.html %}
+    <div class="container">
+        <div class="mt-3">
+            {{content}}
+        </div>
+        <div class="border-top mt-3 pt-3">
+            {% include footer.html %}
+        </div>
     </div>
 </div>
 </body>
