--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,7 @@ layout: default
     </div>
 </div>
 
-<div class="mt-10">
+<div class="mt-10 post-body">
     {{content}}
     {% if page.references %}
     <fieldset>
