Update home page, theme, and template

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,5 @@
 <div>
-    <h3>Hi! This is Mort!</h3>
-    <div>I'm software engineer and open source enthusiast especially in C/C++ & Python and GNU/Linux.</div>
+    <label>Hello!</label>
+    <h3 class="intro m-0">This is Mort!</h3>
+    <div>I'm a software engineer and open source enthusiast especially in C, C++ & Python on GNU/Linux platform.</div>
 </div>
