--- a/themes/0t1/layouts/_default/single.html
+++ b/themes/0t1/layouts/_default/single.html
@@ -2,7 +2,7 @@
 
 <div class="row mt-2">
   <div>
-    <small class="post-publish-at fst-italic">{{ .Date.Format "July 3, 2006" }}</small>
+    <small class="post-publish-at fst-italic">{{ .Date.Format "Monday, Jan 2, 2006" }}</small>
 
     {{ range .Params.tags }}
     <label class="badge post-tag">#{{ . }}</label>
